# SDLP2

./: .gitignore  README.md
SDL_Android/: .gitignore
SDL_Android/SmartDeviceLinkProxyAndroid/: .project  AndroidManifest.xml
SDL_Android/SmartDeviceLinkTester/: .classpath  .project  AndroidManifest.xml  project.properties
SDL_Core/: CMakeLists.txt
SDL_Core/doc/: install.txt
SDL_Core/profileApi/: IProfile.h  IProfileManagerProxy.h  MobileAppState.h
SDL_Core/src/appMain/: CMakeLists.txt  appMain.cpp  life_cycle.cc  life_cycle.h  log4cplus.properties  policy_table.json
SDL_Core/src/components/: CMakeLists.txt
SDL_Core/src/components/application_manager_profile_manager_interface/: CMakeLists.txt
SDL_Core/src/components/application_manager_profile_manager_interface/include/application_manager_profile_manager_interface/: application_manager_holder.h  iapplication_manager.h  iprofile_manager.h  profile_manager_holder.h  profile_manager_result.h
SDL_Core/src/components/application_manager_profile_manager_interface/src/: application_manager_holder.cc  profile_manager_holder.cc
SDL_Core/src/components/profile_manager/: CMakeLists.txt
SDL_Core/src/components/profile_manager/include/profile_manager/: active_profiles_register.h  application_manager_hmi_communicator.h  isdl_core_adapter.h  profile_connections_register.h  profile_instance_manager.h  profile_libraries_manager.h  profile_manager.h  profile_manager_common.h  profile_sockets_register.h  sdl_core_adapter.h
SDL_Core/src/components/profile_manager/include/profile_manager/appman_hmi_protocol/: appman_hmi_ipc_address.h  profiles_apps_message.h
SDL_Core/src/components/profile_manager/include/profile_manager/ipc/: pm_receiver_zmq_socket.h  pm_sender_zmq_socket.h
SDL_Core/src/components/profile_manager/include/profile_manager/profile_process/: profile_process.h
SDL_Core/src/components/profile_manager/src/: active_profiles_register.cc  application_manager_hmi_communicator.cc  profile_connections_register.cc  profile_instance_manager.cc  profile_libraries_manager.cc  profile_manager.cc  profile_sockets_register.cc  sdl_core_adapter.cc
SDL_Core/src/components/profile_manager/src/appman_hmi_protocol/: profiles_apps_message.cc
SDL_Core/src/components/profile_manager/src/ipc/: pm_receiver_zmq_socket.cc  pm_sender_zmq_socket.cc
SDL_Core/src/components/profile_manager/src/profile_process/: CMakeLists.txt  main.cc  profile_process.cc
SDL_Core/src/components/utils/: CMakeLists.txt
SDL_Core/src/components/utils/include/utils/: Logger.hpp  base_64_coder.h  logger.h  uuid_store.h  work_with_os.h
SDL_Core/src/components/utils/include/utils/zmq/zmq_socket/: receiver_zmq_socket.h  sender_zmq_socket.h  socket_connection_type.h  zmq_socket.h  zmq_socket_common.h
SDL_Core/src/components/utils/src/: base_64_coder.cc  logger.cc  uuid_store.cc  work_with_os.cc
SDL_Core/src/components/utils/src/zmq/: receiver_zmq_socket.cc  sender_zmq_socket.cc  zmq_socket.cc
SDL_iOS/: README.txt  aggregate_target_run_script.txt
SDL_iOS/ProfilesTester/ProfilesTester/: AppDelegate.h  AppDelegate.m  LoggedMessage.h  LoggedMessage.m  ProfileNames.h  ProfilesTester-Info.plist  ProfilesTester-Prefix.pch  RequestsSender.h  SDLRPCResponse+isSuccess.h  SDLRPCResponse+isSuccess.m  TableLogger.h  TableLogger.m  Test.h  Test.mm  Test02.h  Test02.m  Test03.h  Test03.m  Test04.h  Test04.m  Test05.h  Test05.m  Test09.h  Test09.m  Test10.h  Test10.m  Test11.h  Test11.m  Test14.h  Test14.m  Test17.h  Test17.m  Test21.h  Test21.m  Test22.h  Test22.m  Test25.h  Test25.m  Test26.h  Test26.m  (+21 more)
SDL_iOS/ProfilesTester/ProfilesTester.xcodeproj/: project.pbxproj
SDL_iOS/SmartDeviceLink/SmartDeviceLink/: CustomIOS7AlertView.h  CustomIOS7AlertView.m  IVINames.h  ProfileBinaryPacketizer.h  ProfileBinaryPacketizer.m  ProfileManagerNotification.h  ProfileManagerNotification.m  ProfileManagerRequest.h  ProfileManagerRequest.m  SDLAbstractProtocol.h  SDLAbstractProtocol.m  SDLAbstractTransport.h  SDLAbstractTransport.m  SDLAddCommand.h  SDLAddCommand.m  SDLAddCommandResponse.h  SDLAddCommandResponse.m  SDLAddProfile.h  SDLAddProfile.m  SDLAddProfileResponse.h  SDLAddProfileResponse.m  SDLAddSubMenu.h  SDLAddSubMenu.m  SDLAddSubMenuResponse.h  SDLAddSubMenuResponse.m  SDLAlert.h  SDLAlert.m  SDLAlertManeuver.h  SDLAlertManeuver.m  SDLAlertManeuverResponse.h  SDLAlertManeuverResponse.m  SDLAlertResponse.h  SDLAlertResponse.m  SDLAppHMIType.h  SDLAppHMIType.m  SDLAppInterfaceUnregisteredReason.h  SDLAppInterfaceUnregisteredReason.m  SDLAppStateChanged.h  SDLAppStateChanged.m  SDLAppStateChangedResponse.h  (+407 more)
SDL_iOS/SmartDeviceLink/SmartDeviceLink.xcodeproj/: project.pbxproj
SDL_iOS/SmartDeviceLinkTester/SmartDeviceLinkTester/: AddCommandViewController.h  AddCommandViewController.m  AddCommandViewController.xib  AddMenuOption.h  AddMenuOption.m  AddProfileViewController.h  AddProfileViewController.m  AddSubMenuViewController.h  AddSubMenuViewController.m  AddSubMenuViewController.xib  AlertManeuverViewController.h  AlertManeuverViewController.m  AlertManeuverViewController.xib  AlertViewController.h  AlertViewController.m  AlertViewController.xib  AppDelegate.h  AppDelegate.m  ApplicationStateChangedViewController.h  ApplicationStateChangedViewController.m  ApplicationStateChangedViewController.xib  (+104 more)
SDL_iOS/SmartDeviceLinkTester/SmartDeviceLinkTester.xcodeproj/: project.pbxproj
profiles/: CMakeLists.txt
profiles/TestEchoProfile/: CMakeLists.txt
profiles/TestEchoProfile/include/: TestEchoProfile.h
profiles/TestEchoProfile/src/: TestEchoProfile.cpp
profiles/TestSendingMsgProfile/: CMakeLists.txt
profiles/TestSendingMsgProfile/include/: TestSendingMsgProfile.h
profiles/TestSendingMsgProfile/src/: TestSendingMsgProfile.cpp
(+252 files in other folders)
